--- a/recipes/style.css
+++ b/recipes/style.css
@@ -1,4 +1,4 @@
-/* .html-body {
+/*body {
     text-align: center;
     font-size: 20px;
     font-family: 'Courier New', Courier, monospace;
@@ -6,3 +6,9 @@
 }
 */
 
+#bolo {
+    text-align: center;
+    font-size: 20px;
+    font-family: 'Courier New', Courier, monospace;
+    background-color: blanchedalmond;
+}
